[gd_scene format=3 uid="uid://5hbj32gqeeb1"]

[ext_resource type="Script" uid="uid://cv5t0k0r5jtq" path="res://assets/start_screen/start_screen.gd" id="1_fwd4i"]
[ext_resource type="Texture2D" uid="uid://dkhnses611d4b" path="res://assets/start_screen/images/menu_theme.png" id="1_sb1oq"]
[ext_resource type="Texture2D" uid="uid://dsg7ekgjqpdr0" path="res://assets/start_screen/images/title.png" id="2_lh3vm"]
[ext_resource type="FontFile" uid="uid://bhnk3wqndu8dp" path="res://Game/fonts/TrajanPro-Bold.otf" id="4_w4mux"]
[ext_resource type="Texture2D" uid="uid://bseh2q8ihqa6l" path="res://assets/start_screen/images/pointer.webp" id="5_xwm6q"]
[ext_resource type="AudioStream" uid="uid://c1v5s111l8u8a" path="res://assets/start_screen/audio/Title.wav" id="6_w4mux"]
[ext_resource type="AudioStream" uid="uid://bks12ambgv4vd" path="res://assets/start_screen/audio/ui button cancel.wav" id="7_wfb0p"]
[ext_resource type="AudioStream" uid="uid://bm7u8tlxgjvtm" path="res://assets/start_screen/audio/ui button confirm.wav" id="8_24ba0"]
[ext_resource type="AudioStream" uid="uid://b2qsv3xslbfqc" path="res://assets/start_screen/audio/ui change selection.wav" id="9_d1pk8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_64uaj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fwd4i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xwm6q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o8x2c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pgy4w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iwwpc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w4mux"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wfb0p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_24ba0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o8x2c"]
atlas = ExtResource("5_xwm6q")
region = Rect2(0, 0, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgy4w"]
atlas = ExtResource("5_xwm6q")
region = Rect2(99, 0, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwwpc"]
atlas = ExtResource("5_xwm6q")
region = Rect2(198, 0, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4mux"]
atlas = ExtResource("5_xwm6q")
region = Rect2(297, 0, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfb0p"]
atlas = ExtResource("5_xwm6q")
region = Rect2(396, 0, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_24ba0"]
atlas = ExtResource("5_xwm6q")
region = Rect2(0, 72, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1pk8"]
atlas = ExtResource("5_xwm6q")
region = Rect2(99, 72, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3wbb"]
atlas = ExtResource("5_xwm6q")
region = Rect2(198, 72, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_wywq0"]
atlas = ExtResource("5_xwm6q")
region = Rect2(297, 72, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6258"]
atlas = ExtResource("5_xwm6q")
region = Rect2(396, 72, 99, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgtyo"]
atlas = ExtResource("5_xwm6q")
region = Rect2(0, 144, 99, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_wjpwo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8x2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgy4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwwpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4mux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfb0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24ba0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1pk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3wbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wywq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6258")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgtyo")
}],
"loop": false,
"name": &"in",
"speed": 30.0
}]

[node name="StartScreen" type="CanvasLayer" unique_id=1755483559]
script = ExtResource("1_fwd4i")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1970536223]
offset_right = 1920.0
offset_bottom = 1081.0
texture = ExtResource("1_sb1oq")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="." unique_id=436123275]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -637.0
offset_right = 637.0
offset_bottom = 521.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("2_lh3vm")

[node name="basic buttons" type="VBoxContainer" parent="." unique_id=1592574367]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = 86.0
offset_right = 121.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="start" type="Button" parent="basic buttons" unique_id=834789896]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit Game")
focus_neighbor_bottom = NodePath("../Options")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xwm6q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pgy4w")
text = "Start Game"

[node name="Options" type="Button" parent="basic buttons" unique_id=566048822]
layout_mode = 2
focus_neighbor_top = NodePath("../start")
focus_neighbor_bottom = NodePath("../extra")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iwwpc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w4mux")
text = "Options
"

[node name="extra" type="Button" parent="basic buttons" unique_id=1524897781]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Quit Game")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xwm6q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pgy4w")
text = "Extras"

[node name="Quit Game" type="Button" parent="basic buttons" unique_id=1726147323]
layout_mode = 2
focus_neighbor_top = NodePath("../extra")
focus_neighbor_bottom = NodePath("../start")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wfb0p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_24ba0")
text = "Quit Game"

[node name="quit game" type="VBoxContainer" parent="." unique_id=1134937715]
visible = false
offset_left = 801.5
offset_top = 626.0
offset_right = 1118.5
offset_bottom = 858.0
theme_override_constants/separation = 60

[node name="quit_text" type="Label" parent="quit game" unique_id=388748018]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 40
text = "Are You Sure?"
horizontal_alignment = 1

[node name="Quit-yes" type="Button" parent="quit game" unique_id=1489570151]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit-no")
focus_neighbor_bottom = NodePath("../Quit-no")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wfb0p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_24ba0")
text = "Yes"

[node name="Quit-no" type="Button" parent="quit game" unique_id=1845397429]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit-yes")
focus_neighbor_bottom = NodePath("../Quit-yes")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wfb0p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_24ba0")
text = "No"

[node name="settings" type="VBoxContainer" parent="." unique_id=1345017698]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = 86.0
offset_right = 121.0
offset_bottom = 314.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="audio" type="Button" parent="settings" unique_id=934086725]
layout_mode = 2
focus_neighbor_top = NodePath("../screen_shake")
focus_neighbor_bottom = NodePath("../exit")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iwwpc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w4mux")
text = "audio

"

[node name="rumble" type="Button" parent="settings" unique_id=1319358564]
layout_mode = 2
focus_neighbor_top = NodePath("../exit")
focus_neighbor_bottom = NodePath("../screen_shake")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xwm6q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pgy4w")
text = "Rumble: Normal"

[node name="screen_shake" type="Button" parent="settings" unique_id=1944336281]
layout_mode = 2
focus_neighbor_top = NodePath("../rumble")
focus_neighbor_bottom = NodePath("../audio")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iwwpc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w4mux")
text = "Screen Shake: Normal
"

[node name="exit" type="Button" parent="settings" unique_id=1641804972]
layout_mode = 2
focus_neighbor_top = NodePath("../screen_shake")
focus_neighbor_bottom = NodePath("../rumble")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wfb0p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_24ba0")
text = "back"

[node name="volume_settings" type="VBoxContainer" parent="." unique_id=416521996]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.0
offset_top = 38.0
offset_right = 221.0
offset_bottom = 362.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="master_volume" type="Button" parent="volume_settings" unique_id=1567123001]
layout_mode = 2
focus_neighbor_top = NodePath("../music_volume")
focus_neighbor_bottom = NodePath("../exit_audio")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iwwpc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w4mux")
text = "Master Volume: 5
"

[node name="sound_volume" type="Button" parent="volume_settings" unique_id=1852095736]
layout_mode = 2
focus_neighbor_top = NodePath("../exit_audio")
focus_neighbor_bottom = NodePath("../music_volume")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xwm6q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pgy4w")
text = "Sound Volume: 5"

[node name="music_volume" type="Button" parent="volume_settings" unique_id=1263840182]
layout_mode = 2
focus_neighbor_top = NodePath("../sound_volume")
focus_neighbor_bottom = NodePath("../master_volume")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_iwwpc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w4mux")
text = "Music Volume: 5
"

[node name="exit_audio" type="Button" parent="volume_settings" unique_id=277060763]
layout_mode = 2
focus_neighbor_top = NodePath("../music_volume")
focus_neighbor_bottom = NodePath("../sound_volume")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wfb0p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_24ba0")
text = "back"

[node name="extra" type="VBoxContainer" parent="." unique_id=57062119]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = 86.0
offset_right = 158.5
offset_bottom = 359.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="delete_save" type="Button" parent="extra" unique_id=520326425]
layout_mode = 2
focus_neighbor_top = NodePath("../exit")
focus_neighbor_bottom = NodePath("../unkillable")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xwm6q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pgy4w")
text = "Delete save"

[node name="unkillable" type="Button" parent="extra" unique_id=669165345]
layout_mode = 2
focus_neighbor_top = NodePath("../delete_save")
focus_neighbor_bottom = NodePath("../exit")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xwm6q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_pgy4w")
text = "Unkillable: off"

[node name="exit" type="Button" parent="extra" unique_id=872854818]
layout_mode = 2
focus_neighbor_top = NodePath("../unkillable")
focus_neighbor_bottom = NodePath("../delete_save")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wfb0p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_24ba0")
text = "back"

[node name="reset_save" type="VBoxContainer" parent="." unique_id=747162696]
visible = false
offset_left = 801.5
offset_top = 626.0
offset_right = 1118.5
offset_bottom = 899.0
theme_override_constants/separation = 60

[node name="quit_text" type="Label" parent="reset_save" unique_id=1730253495]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 40
text = "Are You Sure?"
horizontal_alignment = 1

[node name="save-yes" type="Button" parent="reset_save" unique_id=1527302936]
layout_mode = 2
focus_neighbor_top = NodePath("../save-no")
focus_neighbor_bottom = NodePath("../save-no")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wfb0p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_24ba0")
text = "Yes"

[node name="save-no" type="Button" parent="reset_save" unique_id=1827172486]
layout_mode = 2
focus_neighbor_top = NodePath("../save-yes")
focus_neighbor_bottom = NodePath("../save-yes")
theme_override_fonts/font = ExtResource("4_w4mux")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_64uaj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fwd4i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wfb0p")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_o8x2c")
theme_override_styles/focus = SubResource("StyleBoxEmpty_24ba0")
text = "No"

[node name="left_arrow" type="AnimatedSprite2D" parent="." unique_id=495789529]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_wjpwo")
animation = &"in"

[node name="right_arrow" type="AnimatedSprite2D" parent="." unique_id=1756090234]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_wjpwo")
animation = &"in"
flip_h = true

[node name="audio" type="Node" parent="." unique_id=598222122]

[node name="Title" type="AudioStreamPlayer" parent="audio" unique_id=324871251]
stream = ExtResource("6_w4mux")
bus = &"background"

[node name="UiButtonCancel" type="AudioStreamPlayer" parent="audio" unique_id=1552542295]
stream = ExtResource("7_wfb0p")
bus = &"SFX"

[node name="UiButtonConfirm" type="AudioStreamPlayer" parent="audio" unique_id=1133028844]
stream = ExtResource("8_24ba0")
bus = &"SFX"

[node name="UiChangeSelection" type="AudioStreamPlayer" parent="audio" unique_id=1735035407]
stream = ExtResource("9_d1pk8")
bus = &"SFX"

[connection signal="pressed" from="basic buttons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="basic buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="basic buttons/extra" to="." method="_on_extra_pressed"]
[connection signal="pressed" from="basic buttons/Quit Game" to="." method="_on_quit_game_pressed"]
[connection signal="pressed" from="quit game/Quit-yes" to="." method="_on_quityes_pressed"]
[connection signal="pressed" from="quit game/Quit-no" to="." method="_on_quitno_pressed"]
[connection signal="pressed" from="settings/audio" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="settings/rumble" to="." method="_on_rumble_pressed"]
[connection signal="pressed" from="settings/screen_shake" to="." method="_on_screen_shake_pressed"]
[connection signal="pressed" from="settings/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="volume_settings/master_volume" to="." method="_on_master_volume_pressed"]
[connection signal="pressed" from="volume_settings/sound_volume" to="." method="_on_sound_volume_pressed"]
[connection signal="pressed" from="volume_settings/music_volume" to="." method="_on_music_volume_pressed"]
[connection signal="pressed" from="volume_settings/exit_audio" to="." method="_on_exit_audio_pressed"]
[connection signal="pressed" from="extra/delete_save" to="." method="_on_delete_save_pressed"]
[connection signal="pressed" from="extra/unkillable" to="." method="_on_unkillable_pressed"]
[connection signal="pressed" from="extra/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="reset_save/save-yes" to="." method="_on_saveyes_pressed"]
[connection signal="pressed" from="reset_save/save-no" to="." method="_on_saveno_pressed"]
